# ipkexercices

./: CMakeLists.txt  README.md  aufg2  aufg3
aufg1/src/: cross.cc  main.cc  point.cc  polygon.cc
aufg1/src/include/: polygon.hh
aufg2/src/: canvas.cc  plot.cc  testcorners.cc
aufg2/src/include/: canvas.hh
src/: IterationResult.cc  aufg1.cc  aufg2.cc  aufg3.cc  body.cc  canvas.cc  cross.cc  ctest.cc  frequencies.cc  io.cc  main.cc  normal.cc  pgm.cc  point.cc  polygon.cc  readvector.cc  sdlwrapper.cc  statistics.cc  statisticsdriver.cc  test.cc  test2.cc  testP.cc  uniform.cc  withPlugins.cc
src/include/: AnalysisPlugin.hh  Filter.hh  Frequencies.hh  Frequencysource.hh  IterationResult.hh  Letterfrequencies.hh  body.hh  canvas.hh  frequencies.hh  io.hh  pgm.hh  point.hh  polygon.hh  sdlwrapper.hh  statistics.hh
src1/: helloworld.cc  legalbutwrong.cpp
src2/: aufg1.cc  aufg2.cc  aufg3.cc
